@@ -457,6 +457,7 @@ GW_CHANGELOGS = "\n\n5.1.14\n\n" .. GW_CHANGELOGS
 --VERSION 5.1.15
 GW_CHANGELOGS = "   - Settings: Checkboxes now also toggle if click on the text\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "\nMISCELLANEOUS\n" .. GW_CHANGELOGS
+GW_CHANGELOGS = "   - Enhanced durability icon at hero panel\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "   - Added more Battleground HUD's\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "   - Added option the set the Stancebar to the left or right of the Actionbar\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "   - Added aggroborder to partyframes\n" .. GW_CHANGELOGS
