@@ -4,6 +4,7 @@ NEW
     - Added aggroborder to partyframes
     - Added option the set the Stancebar to the left or right of the Actionbar
     - Added more Battleground HUD's
+    - Enhanced durability icon at hero panel 
 
 MISCELLANEOUS
     - Settings: Checkboxes now also toggle if click on the text
